Aquí colocamos nuestro primer párrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Aqui le vamos a poner el titulo de nuestra pagina</h1>
+    <p>Aqui esta el primer parrafo</p>
 </body>
 </html>
