primer parrafo desde master

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Aqui le vamos a poner el titulo de nuestra pagina</h1>
     <p>Aqui esta el primer parrafo</p>
+    <p>Aqui esta el parrafo desde master</p>
 </body>
 </html>
