Agregamos un parrafo desde rama1

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Aqui le vamos a poner el titulo de nuestra pagina</h1>
     <p>Aqui esta el primer parrafo</p>
     <p>Aqui esta el parrafo desde master</p>
+    <p>Hola desde Rama1</p>
 </body>
 </html>
