--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="estilo.css">
     <link href="index2.html">
+    <link href="rama3.html">
     <title>Document</title>
 </head>
 <body>
